New version without casting in the FileIO Classes